added definitions.py with path definitions, e.g. root and config file. adapted modules...

--- a/data_sharing/config.conf
+++ b/data_sharing/config.conf
@@ -2,7 +2,7 @@ keyword1 = value1
 keyword2 = value2
 [db]
 name = metadata.db
-type = sqlite
+type = sqlite:///
 path = /Users/livia/msc_dissertation/CODE/data_sharing/data/output
 [data]
 input = /Users/livia/msc_dissertation/CODE/data_sharing/data/input
