Added File system configuration and DataBase Ingestion for new datasets and layers

--- a/data_sharing/config.conf
+++ b/data_sharing/config.conf
@@ -7,6 +7,7 @@ path = /Users/livia/msc_dissertation/CODE/data_sharing/data/output
 [data]
 input = /Users/livia/msc_dissertation/CODE/data_sharing/data/input
 output = /Users/livia/msc_dissertation/CODE/data_sharing/data/output/datasets
-[section3]
-keyword 8 = value8, value9, value10
-keyword 9 = value11, value12, value13
+[layers]
+types = dem, rate, error
+colours = dem.txt, rate.txt, error.txt
+colpath = /Users/livia/msc_dissertation/CODE/data_sharing/data/input/colourfiles
