added raster processing and tiling funct from commandline

--- a/data_sharing/config.conf
+++ b/data_sharing/config.conf
@@ -7,7 +7,9 @@ path = /Users/livia/msc_dissertation/CODE/data_sharing/data/output
 [data]
 input = /Users/livia/msc_dissertation/CODE/data_sharing/data/input
 output = /Users/livia/msc_dissertation/CODE/data_sharing/data/output/datasets
+tiles = tiles
 [layers]
 types = dem, rate, error
+exponent = 2, 5, 3
 colours = dem.txt, rate.txt, error.txt
 colpath = /Users/livia/msc_dissertation/CODE/data_sharing/data/input/colourfiles
