added add layer functionality from commandline, enabled checking for timestamps and updating when version is newer, moved System Config to seperate file.

--- a/data_sharing/config.conf
+++ b/data_sharing/config.conf
@@ -11,5 +11,6 @@ tiles = tiles
 [layers]
 types = dem, rate, error
 exponent = 2, 5, 3
+scale = "{'min': 0, 'max': 2000}", "{'min': -2, 'max': 2}", "{'min': -2, 'max': 2}"
 colours = dem.txt, rate.txt, error.txt
 colpath = /Users/livia/msc_dissertation/CODE/data_sharing/data/input/colourfiles
