--- a/data_sharing/config.conf
+++ b/data_sharing/config.conf
@@ -9,8 +9,9 @@ input = /Users/livia/msc_dissertation/CODE/data_sharing/data/input
 output = /Users/livia/msc_dissertation/CODE/data_sharing/data/output/datasets
 tiles = tiles
 [layers]
+rawfilename = raw_input
 types = dem, rate, error
 exponent = 1, 5, 3
-scale = "{'min': 0, 'max': 4000}", "{'min': -2, 'max': 2}", "{'min': -2, 'max': 2}"
+scale = "{'min': 0, 'max': 4000}", "{'min': -2, 'max': 2}", "{'min': 0, 'max': 3000}"
 colours = dem.txt, rate.txt, error.txt
 colpath = /Users/livia/msc_dissertation/CODE/data_sharing/data/input/colourfiles
