added explore tool to dataset toolbox

--- a/data_sharing/config.conf
+++ b/data_sharing/config.conf
@@ -10,8 +10,8 @@ output = /Users/livia/msc_dissertation/CODE/data_sharing/data/output/datasets
 tiles = tiles
 [layers]
 rawfilename = raw_input
-types = dem, rate, error
-exponent = 1, 5, 3
-scale = "{'min': 0, 'max': 4000}", "{'min': -2, 'max': 2}", "{'min': 0, 'max': 3000}"
-colours = dem.txt, rate.txt, error.txt
+types = dem, rate, error, velocity
+exponent = 1, 5, 3, 2
+scale = "{'min': 0, 'max': 4000}", "{'min': -2, 'max': 2}", "{'min': 0, 'max': 3000}", "{'min': 0, 'max': 3000}"
+colours = dem.txt, rate.txt, error.txt, velocity.txt
 colpath = /Users/livia/msc_dissertation/CODE/data_sharing/data/input/colourfiles
