Changed data structure and enabled dates for layers

--- a/data_sharing/config.conf
+++ b/data_sharing/config.conf
@@ -1,5 +1,3 @@
-keyword1 = value1
-keyword2 = value2
 [db]
 name = metadata.db
 type = sqlite:///
@@ -8,6 +6,7 @@ path = /Users/livia/msc_dissertation/CODE/data_sharing/data/output
 input = /Users/livia/msc_dissertation/CODE/data_sharing/data/input
 output = /Users/livia/msc_dissertation/CODE/data_sharing/data/output/datasets
 tiles = tiles
+projection = EPSG:3413
 [layers]
 rawfilename = raw_input
 reprojectedfilename = reproject
