--- a/data_sharing/config.conf
+++ b/data_sharing/config.conf
@@ -13,4 +13,5 @@ reprojectedfilename = reproject
 types = dem, rate, error, velocity
 scale = "{'min': 0, 'max': 3000}", "{'min': -1, 'max': 1}", "{'min': 0, 'max': 3000}", "{'min': 0, 'max': 100}"
 colours = dem.txt, rate.txt, error.txt, velocity.txt
+colourmethods = linear, centred, linear, linear
 colpath = /Users/livia/msc_dissertation/CODE/data_sharing/data/input/colourfiles
